# ENYO

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  run-audit.bat  run-jeu.bat  run-rejeu.bat  run-spectateur.bat  run.bat  rust-toolchain.toml
.claude/: settings.json
crates/ai/: Cargo.toml
crates/ai/src/: director.rs  lib.rs
crates/ai/tests/: baseline.rs  director.rs  war_ai.rs
crates/harness/: Cargo.toml
crates/harness/src/: main.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/llm/tests/: parse.rs
crates/persist/: Cargo.toml
crates/persist/src/: lib.rs
crates/persist/tests/: replay.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/sim/: Cargo.toml
crates/sim/src/: climate.rs  connect.rs  diplo.rs  dynamics.rs  lib.rs  nation.rs  noise.rs  path.rs  province.rs  rng.rs  tech.rs  tile.rs  unit.rs  worldgen.rs
crates/sim/tests/: audit.rs  combat.rs  core_loop.rs  director.rs  economy.rs  provinces.rs  replay.rs  tech.rs  units.rs  war.rs  worldgen.rs
crates/ui/: Cargo.toml
crates/ui/src/: gui.rs  main.rs
docs/: AUDIT-DIRECTEUR.md  AUDIT-E1.md  ECONOMY.md  GAMEPLAY.md  REALTIME.md  UI.md
