# Workspace Cargo d'ENYO. Les crates vivent dans crates/.
[workspace]
resolver = "2"
members = ["crates/proto", "crates/sim", "crates/persist", "crates/ai", "crates/harness"]

# Métadonnées partagées par toutes les crates (héritées via `.workspace = true`).
[workspace.package]
edition = "2021"
version = "0.0.1"

# Versions de dépendances centralisées : une seule source de vérité.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
proto = { path = "crates/proto" }
sim = { path = "crates/sim" }
persist = { path = "crates/persist" }
ai = { path = "crates/ai" }
