# Workspace Cargo d'ENYO. Les crates vivent dans crates/.
[workspace]
resolver = "2"
members = ["crates/proto", "crates/sim", "crates/persist", "crates/ai", "crates/llm", "crates/render", "crates/ui", "crates/harness"]

# Métadonnées partagées par toutes les crates (héritées via `.workspace = true`).
[workspace.package]
edition = "2021"
version = "0.0.1"

# Versions de dépendances centralisées : une seule source de vérité.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
proto = { path = "crates/proto" }
sim = { path = "crates/sim" }
persist = { path = "crates/persist" }
ai = { path = "crates/ai" }
llm = { path = "crates/llm" }
render = { path = "crates/render" }
# Police bitmap 8x8 (données const pures, pur Rust) — texte dans l'UI.
font8x8 = "0.3"
# Accès Win32 minimal (taille de l'écran) — libs d'import précompilées GNU,
# comme minifb : aucune compilation C requise.
winapi = { version = "0.3", features = ["winuser"] }
