[package]
name = "harness"
edition.workspace = true
version.workspace = true

[dependencies]
proto.workspace = true
sim.workspace = true
persist.workspace = true
ai.workspace = true
llm.workspace = true
render.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
